// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`generateDepthRecordGqlFieldsFromRecord should generate depth one record gql fields from empty record 1`] = `
{
  "accountOwner": false,
  "accountOwnerId": false,
  "address": false,
  "annualRecurringRevenue": false,
  "attachments": false,
  "createdAt": false,
  "createdBy": false,
  "deletedAt": false,
  "domainName": false,
  "employees": false,
  "favorites": false,
  "id": false,
  "idealCustomerProfile": false,
  "introVideo": false,
  "linkedinLink": false,
  "name": false,
  "noteTargets": false,
  "opportunities": false,
  "people": false,
  "position": false,
  "searchVector": false,
  "tagline": false,
  "taskTargets": false,
  "timelineActivities": false,
  "updatedAt": false,
  "visaSponsorship": false,
  "workPolicy": false,
  "xLink": false,
}
`;

exports[`generateDepthRecordGqlFieldsFromRecord should generate depth one record gql fields from record with some fields 1`] = `
{
  "accountOwner": false,
  "accountOwnerId": false,
  "address": false,
  "annualRecurringRevenue": false,
  "attachments": false,
  "createdAt": false,
  "createdBy": false,
  "deletedAt": false,
  "domainName": true,
  "employees": false,
  "favorites": false,
  "id": true,
  "idealCustomerProfile": false,
  "introVideo": false,
  "linkedinLink": false,
  "name": true,
  "noteTargets": false,
  "opportunities": false,
  "people": false,
  "position": false,
  "searchVector": false,
  "tagline": false,
  "taskTargets": false,
  "timelineActivities": false,
  "updatedAt": false,
  "visaSponsorship": false,
  "workPolicy": false,
  "xLink": false,
}
`;

exports[`generateDepthRecordGqlFieldsFromRecord should generate depth zero record gql fields from record with some fields 1`] = `
{
  "accountOwnerId": false,
  "address": false,
  "annualRecurringRevenue": false,
  "createdAt": false,
  "createdBy": false,
  "deletedAt": false,
  "domainName": false,
  "employees": false,
  "id": true,
  "idealCustomerProfile": false,
  "introVideo": false,
  "linkedinLink": false,
  "name": true,
  "position": false,
  "searchVector": false,
  "tagline": false,
  "updatedAt": false,
  "visaSponsorship": false,
  "workPolicy": false,
  "xLink": false,
}
`;
